--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
 		<img class="arrow arrow_right" src="./assets/images/arrow_right.png" alt="flèche droite">
 		<p>Impressions tous formats <span>en boutique et en ligne</span></p>
 		<div class="dots">
+			<span class="dot dot_selected"></span>
+			<span class="dot"></span>
+			<span class="dot"></span>
+			<span class="dot"></span>
 		</div>
 	</div>
 	<section id="about-us" class="container">
